[project]
name = "rushhour"
version = "0.1.0"
description = "A Rush Hour solver template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["numpy>=2.3.1", "torch>=2.7.1"]

[tool.ruff]
line-length = 179
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E741", "F722"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
